--- a/auth-backend/.env
+++ b/auth-backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://devmuqueem:xtEPJhKSCiW8vp98@cluster0.zq9aymx.mongodb.net/authdb
+MONGO_URI=mongodb+srv://muqueemmohammed:Far3I2Yo3AW4o34H@cluster0.87hrj.mongodb.net/authdb
 JWT_SECRET=supersecretkey
 APP_URL=http://localhost:5000
